src/Base/Sylvester.Bindings/plaidml/plaidml.h

struct plaidml_devconf;
typedef struct plaidml_devconf plaidml_devconf;
// Platform configuration properties.  This set may be extended in the future.
typedef enum {
  // Platform names are NUL-terminated strings.
  PLAIDML_DEVICE_ID = 1,

  // Platform configs are NUL-terminated prototxt.
  PLAIDML_DEVICE_CONFIG = 2,

  // Platform descriptions are NUL-terminated prototxt.
  PLAIDML_DEVICE_DESCRIPTION = 3,

  // Platform descriptions are NUL-terminated prototxt.
  PLAIDML_DEVICE_DETAILS = 4
} plaidml_device_property;
// Returns the version of plaidml
PLAIDML_API const char* plaidml_get_version();
// Queries the supplied device configuration property.
//
// The supplied output buffer pointer should point to a property-specific value
// to be filled in with the requested information; the output size is used for
// property versioning and buffer overflow protection.  Fields in the output
// buffer not supported by the property implementation will be zero-filled
// (i.e. zero is the default value for all properties, including unsupported
// properties).
//
// The value pointed to by output_buffer_size_required, if provided, will be
// filled in with the size required for the output buffer.  This is most useful
// with queries that return string values or arrays of values; a common pattern
// is to make a call with a NULL output buffer and zero size, allocate a buffer
// of the indicated output size required, and then to re-issue the query.
PLAIDML_API bool plaidml_query_devconf(vai_ctx* ctx, plaidml_devconf* devconf, plaidml_device_property property,
                                       void* output_buffer, size_t output_buffer_size,
                                       size_t* output_buffer_size_required);
struct plaidml_device;
typedef struct plaidml_device plaidml_device;
// Opens a device, using the supplied device configuration.  A NULL
// configuration is permitted; this will use the system default PlaidML compute
// device.
PLAIDML_API plaidml_device* plaidml_open_device(vai_ctx* ctx, plaidml_devconf* devconf);
// Closes a device.  After this call, the device should not be used for any
// subsequent calls.  The device may share resources with other objects (such
// as buffers and functions); those resources will only be released when they
// are no longer needed by those other objects.  Closing a NULL device is a
// no-op.
PLAIDML_API void plaidml_close_device(plaidml_device* device);
struct plaidml_device_enumerator;
typedef struct plaidml_device_enumerator plaidml_device_enumerator;
// Allocates a device enumerator and initializes it using automatic configuration.
//
// If the supplied callback is NULL, the call will block until the enumerator
// is fully initialized, and then will return a pointer to the enumerator
// (unless an error occurs).
//
// If the supplied callback is non-NULL, the call will immediately return NULL,
// and will arrange for the callback to be invoked with the enumerator once the
// enumerator becomes available (calling it with a NULL enumerator on error).  The
// library guarantees to invoke the callback exactly once.
//
// If the library returns an enumerator, there will be at least one
// configured device available; otherwise, the call will fail with
// VAI_STATUS_NOT_FOUND.
//
// The library may invoke the callback synchronously if the enumerator is
// immediately available or in error conditions.
PLAIDML_API plaidml_device_enumerator* plaidml_alloc_device_enumerator(
    vai_ctx* ctx, void (*callback)(void* arg, plaidml_device_enumerator* enumerator), void* arg);
// Allocates a device enumerator and initializes it using the supplied
// configuration. Otherwise identical to the version that uses system
// config.
PLAIDML_API plaidml_device_enumerator* plaidml_alloc_device_enumerator_with_config(
    vai_ctx* ctx, const char* configuration, void (*callback)(void* arg, plaidml_device_enumerator* enumerator),
    void* arg);
// Frees a device enumerator.  After this call, the enumerator should not be
// used for any subsequent calls.  The enumerator may share resources with
// other objects (such as devices, buffers, and functions); those resources
// will only be released when they are no longer needed by those other objects.
// Freeing a NULL enumerator is a no-op.
PLAIDML_API void plaidml_free_device_enumerator(plaidml_device_enumerator* enumerator);
// Gets the configuration file that was used to initialize devices.
PLAIDML_API const char* plaidml_get_enumerator_config_source(plaidml_device_enumerator* enumerator);
// Gets the number of device valid or invalid configurations available.
PLAIDML_API size_t plaidml_get_devconf_count(vai_ctx* ctx, plaidml_device_enumerator* enumerator, bool valid_devices);
// Gets one device configuration from a device enumerator.  The lifetime of the
// device configuration is bounded by the device enumerator; there's no need to
// separately free the configuration.  If the requested configuration index is
// out of range, or if the enumerator is NULL, this call will return NULL.
PLAIDML_API plaidml_devconf* plaidml_get_devconf(vai_ctx* ctx, plaidml_device_enumerator* enumerator, size_t index);
// Same as above, only returns invalid devices
PLAIDML_API plaidml_devconf* plaidml_get_invalid_devconf(vai_ctx* ctx, plaidml_device_enumerator* enumerator,
                                                         size_t index);
struct plaidml_buffer;
typedef struct plaidml_buffer plaidml_buffer;
struct plaidml_mapping;
typedef struct plaidml_mapping plaidml_mapping;
// Allocates a buffer of the supplied raw memory size, or returns NULL if the
// library cannot allocate sufficient memory, or if the supplied device is
// NULL.
PLAIDML_API plaidml_buffer* plaidml_alloc_buffer(vai_ctx* ctx, plaidml_device* device, uint64_t size);
// Frees a buffer.  After this call, the buffer should not be used for any
// subsequent calls.  Freeing a NULL buffer is a no-op.
PLAIDML_API void plaidml_free_buffer(plaidml_buffer* buffer);
// Maps a buffer's current contents into memory.
//
// If the supplied callback is NULL, the call will block until the buffer is
// available, and then will return a pointer to a mapping for the buffer
// (unless an error occurs).
//
// If the supplied callback is non-NULL, the call will immediately return NULL,
// and will arrange for the callback to be invoked with the mapping once the
// buffer's data becomes available (calling it with a NULL mapping on error).
//
// The library may invoke the callback synchronously if the buffer's data is
// already available or in error conditions.
//
// A NULL buffer may be supplied; this will always result in a NULL address,
// and an out-of-memory error in the current thread's thread-local storage.
PLAIDML_API plaidml_mapping* plaidml_map_buffer_current(plaidml_buffer* buffer,
                                                        void (*callback)(void* arg, plaidml_mapping* mapping),
                                                        void* arg);
// Maps a buffer into memory, possibly discarding its current contents.
//
// The implementation may preserve or discard the buffer's contents when
// constructing the mapping; callers should not assume that the buffer has been
// initialized.
//
// The implementation may construct a non-coherent mapping: reads from the
// buffer may return arbitrary values, even after writing the same memory from
// the same processor.
//
// A NULL buffer may be supplied; this will always result in a NULL address,
// and an out-of-memory error in the current thread's thread-local storage.
PLAIDML_API plaidml_mapping* plaidml_map_buffer_discard(vai_ctx* ctx, plaidml_buffer* buffer);
// Gets the base address of a mapping's mapped memory region.  If the mapping
// has been written back to the buffer, this call will return NULL.  A NULL
// mapping may be supplied; this will always return NULL.
PLAIDML_API char* plaidml_get_mapping_base(vai_ctx* ctx, plaidml_mapping* mapping);
// Gets the size of a mapping's mapped memory region.  If the mapping has been
// written back to the buffer, this call will return 0.  A NULL mapping may be
// supplied; this will always return 0.
PLAIDML_API size_t plaidml_get_mapping_size(vai_ctx* ctx, plaidml_mapping* mapping);
// Synchronizes a mapping with its backing store (if required by the underlying
// device implementation), possibly removing the mapping from the current
// virtual address space.
//
// After this call, callers must not access the mapping's previous virtual
// memory region.
//
// Callers are allowed to free the mapping and use the buffer as a program input
// immediately after this call.
//
// A NULL mapping may be supplied; this will always result in a false result
// and an out-of-memory error in the current thread's thread-local storage.
PLAIDML_API bool plaidml_writeback_mapping(vai_ctx* ctx, plaidml_mapping* mapping);
// Removes a mapping that's no longer required by the caller.
//
// After this call, callers must not access the mapping's previous virtual
// memory region.
//
// Freeing a NULL mapping is a no-op.
PLAIDML_API void plaidml_free_mapping(plaidml_mapping* mapping);