Sylvester.Compiler.PlaidML/Bindings.cs


        internal static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker(native.ToPointer(), skipVTables);
        }

        internal static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker __CreateInstance(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker.__Internal native, bool skipVTables = false)
        {
            return new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker(native, skipVTables);
        }

        private PlaidmlInvoker(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private PlaidmlInvoker(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvoker.__Internal*) native;
        }
    }

    public unsafe partial class PlaidmlInvocation
    {
        [StructLayout(LayoutKind.Explicit, Size = 0)]
        public partial struct __Internal
        {
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation(native.ToPointer(), skipVTables);
        }

        internal static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation __CreateInstance(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation.__Internal native, bool skipVTables = false)
        {
            return new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation(native, skipVTables);
        }

        private static void* __CopyValue(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation.__Internal));
            *(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private PlaidmlInvocation(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlInvocation.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected PlaidmlInvocation(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }
    }

    public unsafe partial struct PlaidmlGradient
    {
        [StructLayout(LayoutKind.Explicit, Size = 0)]
        public partial struct __Internal
        {
        }

        private PlaidmlGradient.__Internal __instance;
        internal PlaidmlGradient.__Internal __Instance { get { return __instance; } }

        internal static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient(native.ToPointer(), skipVTables);
        }

        internal static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient __CreateInstance(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient.__Internal native, bool skipVTables = false)
        {
            return new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient(native, skipVTables);
        }

        private PlaidmlGradient(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private PlaidmlGradient(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlGradient.__Internal*) native;
        }
    }

    public unsafe partial class plaidml
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_version")]
            internal static extern global::System.IntPtr PlaidmlGetVersion();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_query_devconf")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlQueryDevconf(global::System.IntPtr ctx, global::System.IntPtr devconf, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceProperty property, global::System.IntPtr output_buffer, ulong output_buffer_size, ulong* output_buffer_size_required);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_open_device")]
            internal static extern global::System.IntPtr PlaidmlOpenDevice(global::System.IntPtr ctx, global::System.IntPtr devconf);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_close_device")]
            internal static extern void PlaidmlCloseDevice(global::System.IntPtr device);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_device_enumerator")]
            internal static extern global::System.IntPtr PlaidmlAllocDeviceEnumerator(global::System.IntPtr ctx, global::System.IntPtr callback, global::System.IntPtr arg);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_device_enumerator_with_config")]
            internal static extern global::System.IntPtr PlaidmlAllocDeviceEnumeratorWithConfig(global::System.IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string configuration, global::System.IntPtr callback, global::System.IntPtr arg);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_device_enumerator")]
            internal static extern void PlaidmlFreeDeviceEnumerator(global::System.IntPtr enumerator);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_enumerator_config_source")]
            internal static extern global::System.IntPtr PlaidmlGetEnumeratorConfigSource(global::System.IntPtr enumerator);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_devconf_count")]
            internal static extern ulong PlaidmlGetDevconfCount(global::System.IntPtr ctx, global::System.IntPtr enumerator, bool valid_devices);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_devconf")]
            internal static extern global::System.IntPtr PlaidmlGetDevconf(global::System.IntPtr ctx, global::System.IntPtr enumerator, ulong index);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_invalid_devconf")]
            internal static extern global::System.IntPtr PlaidmlGetInvalidDevconf(global::System.IntPtr ctx, global::System.IntPtr enumerator, ulong index);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_buffer")]
            internal static extern global::System.IntPtr PlaidmlAllocBuffer(global::System.IntPtr ctx, global::System.IntPtr device, ulong size);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_buffer")]
            internal static extern void PlaidmlFreeBuffer(global::System.IntPtr buffer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_map_buffer_current")]
            internal static extern global::System.IntPtr PlaidmlMapBufferCurrent(global::System.IntPtr buffer, global::System.IntPtr callback, global::System.IntPtr arg);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_map_buffer_discard")]
            internal static extern global::System.IntPtr PlaidmlMapBufferDiscard(global::System.IntPtr ctx, global::System.IntPtr buffer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_mapping_base")]
            internal static extern sbyte* PlaidmlGetMappingBase(global::System.IntPtr ctx, global::System.IntPtr mapping);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_mapping_size")]
            internal static extern ulong PlaidmlGetMappingSize(global::System.IntPtr ctx, global::System.IntPtr mapping);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_writeback_mapping")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlWritebackMapping(global::System.IntPtr ctx, global::System.IntPtr mapping);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_mapping")]
            internal static extern void PlaidmlFreeMapping(global::System.IntPtr mapping);
